# type-erasure

./: CMakeLists.txt  README.md  anyany_example.cpp  boost_type_erasure.cpp  boostext_te.cpp  cppdyn_example.cpp  dyno_example.cpp  entt_poly_example.cpp  folly_poly_example.cpp  inheritance.cpp  manual_type_erasure.cpp  proxy.cpp  vcpkg.json
dependencies/: CMakeLists.txt
dependencies/dyno/: CMakeLists.txt
